# search_so_scraper_experiments.rs

./: dkuurl.txt
DKU website/: robots.txt
file_managing_scraper/: Cargo.toml
file_managing_scraper/src/: file_dealer.rs  get_existing.rs  lib.rs  main.rs  scrape.rs  scraper.rs  tests.rs  write_new.rs
fixed_concurrent_scraper/: Cargo.toml
fixed_concurrent_scraper/src/: lib.rs  main.rs
image_scraper/: .gitignore  Cargo.toml
image_scraper/src/: lib.rs  main.rs
original_image_scraper/: .gitignore  Cargo.toml
original_image_scraper/src/: lib.rs  main.rs
reqwest_simple_test/: Cargo.toml
reqwest_simple_test/src/: main.rs
respond_sorter/: Cargo.toml
respond_sorter/src/: main.rs
selfcontained_scraper/: Cargo.toml
selfcontained_scraper/src/: lib.rs  main.rs
stress_test_scraper/: Cargo.toml
