[package]
name = "fixed_concurrent_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.9"
tokio = {version = "1.15.0", features = ["full"] }
select = "0.5.0"
url = "2.2.2"
sha256 = "1.0.3"
bytes = "1.1.0"
sorted-vec = "0.7.0"
regex = "1.5.4"
