[package]
name = "image_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.9"
tokio = {version = "1.15.0", features = ["full"] }
image = "0.23.14"
bytes = "1.1.0"
select = "0.5.0"
url = "2.2.2"
sha256 = "1.0.3"
